--- a/DOCUMENT/YO_SNIPPETS_COOKBOOK_MASTER.tex
+++ b/DOCUMENT/YO_SNIPPETS_COOKBOOK_MASTER.tex
@@ -24,7 +24,12 @@
     
 \usepackage{geometry}           % See geometry.pdf to learn the layout options. There are lots.
 \usepackage{fancyvrb}
-\geometry{letterpaper}          % ... or a4paper or a5paper or ... 
+\geometry{letterpaper,
+ top=1in,
+ left=1in,
+ right=1in,
+ bottom=1in
+ }          % ... or a4paper or a5paper or ... 
 \usepackage[parfill]{parskip}   % Activate to begin paragraphs with an empty line rather than an indent
 \usepackage{graphicx}			% Use pdf, png, jpg, or eps§ with pdflatex; use eps in DVI mode
 								% TeX will automatically convert eps --> pdf in pdflatex		
