--- a/DOCUMENT/noteheads.tex
+++ b/DOCUMENT/noteheads.tex
@@ -262,6 +262,9 @@ And place this \textit{before} the \verb|\lineNoteheadWithRhythmOn|.
 \subsection{Code}
 \begin{Verbatim}[numbers=left,xleftmargin=5mm]
 \version "2.24.4"
+
+% revised on January 25 2025
+
 lineNotehead =
 #(define-music-function (thickness note) (number? ly:music? )
   #{
@@ -271,10 +274,11 @@ lineNotehead =
    \once \override Glissando.breakable = ##t
    \once \override Glissando.after-line-breaking = ##t
    \once \override Glissando.thickness = #thickness
-   \once \override Glissando.bound-details = #'(
-                                                (left (padding . 0))
-                                                (right (padding . 0))
-                                                )
+   \once \override Glissando.bound-details =
+   #'(
+      (left (padding . 0))
+      (right (padding . 0))
+      )
    #note
    \glissando
 
@@ -285,6 +289,8 @@ lineNoteheadOn =
   #{
    \override Stem.stencil = ##f
    \override Flag.stencil = ##f
+   \override TupletBracket.stencil = ##f
+   \override TupletNumber.stencil = ##f
    \override Beam.stencil = ##f
    \override NoteHead.stencil = #ly:text-interface::print
    \override NoteHead.text = \markup{  \char ##x200A }
@@ -292,10 +298,11 @@ lineNoteheadOn =
    \override Glissando.breakable = ##t
    \override Glissando.after-line-breaking = ##t
    \override Glissando.thickness = #thickness
-   \override Glissando.bound-details = #'(
-                                          (left (padding . 0))
-                                          (right (padding . 0))
-                                          )
+   \override Glissando.bound-details =
+   #'(
+      (left (padding . 0))
+      (right (padding . 0))
+      )
    #note
    \glissando
    \override NoteColumn.glissando-skip = ##t
@@ -310,10 +317,11 @@ lineNoteheadWithRhythm =
    \once \override Glissando.breakable = ##t
    \once \override Glissando.after-line-breaking = ##t
    \once \override Glissando.thickness = #thickness
-   \once \override Glissando.bound-details = #'(
-                                                (left (padding . 0))
-                                                (right (padding . 0))
-                                                )
+   \once \override Glissando.bound-details =
+   #'(
+      (left (padding . 0))
+      (right (padding . 0))
+      )
    #note
    \glissando
 
@@ -327,10 +335,11 @@ lineNoteheadWithRhythmOn =
    \override Glissando.breakable = ##t
    \override Glissando.after-line-breaking = ##t
    \override Glissando.thickness = #thickness
-   \override Glissando.bound-details = #'(
-                                          (left (padding . 0))
-                                          (right (padding . 0))
-                                          )
+   \override Glissando.bound-details =
+   #'(
+      (left (padding . 0))
+      (right (padding . 0))
+      )
    #note
    \glissando
    \override NoteColumn.glissando-skip = ##t
@@ -349,6 +358,9 @@ lineNoteheadOff =
  \revert Glissando.thickness
  \revert Glissando.bound-details
  \revert NoteColumn.glissando-skip
+ \revert TupletBracket.stencil
+ \revert TupletNumber.stencil
+ \revert Beam.stencil
 }
 
 
@@ -398,7 +410,6 @@ lineNoteheadOff =
   }
  }
 }
-
 \end{Verbatim}
 \hfill \par 
 \hyperref[sec:toc]{\textbf{Table of Contents}}
