--- a/DOCUMENT/noteheads.tex
+++ b/DOCUMENT/noteheads.tex
@@ -714,15 +714,16 @@ Filled and hollow square noteheads.
 \version "2.24.4"
 
 % See also: https://lsr.di.unimi.it/LSR/Item?id=516
+% UPDATED June 13 2025
 
 squareHollowNoteheadDesign =
-#(ly:make-stencil '(path 0.15 (moveto  0.05 0.425
-                                       rlineto 1. 0
+#(ly:make-stencil '(path 0.15 (moveto  0.0 0.425
+                                       rlineto 1.2 0
                                        rlineto 0 -0.875
-                                       rlineto -1. 0
+                                       rlineto -1.2 0
                                        closepath)
                          )
-                  (cons -0.025 1.125)
+                  (cons -0.15 1.275)
                   (cons -1 1))
 
 squareHollowNotehead =
@@ -738,17 +739,17 @@ squareHollowNoteheadOn =
 squareHollowNoteheadOff = \revert Voice.NoteHead.stencil
 
 squareFilledNoteheadDesign =
-#(ly:make-stencil '(path 0.15 (moveto  0.05 0.425
-                                       rlineto 1. 0
-                                       rlineto 0 -0.875
-                                       rlineto -1. 0
-                                       closepath)
+#(ly:make-stencil '(path 0.15  (moveto  0.0 0.425
+                                        rlineto 1.2 0
+                                        rlineto 0 -0.875
+                                        rlineto -1.2 0
+                                        closepath)
+
                          round
                          round
                          #t)
-                  (cons -0.025 1.125)
-                  (cons -1 1))
-
+                  (cons -0.15 1.275)
+                  (cons -1 0))
 
 squareFilledNotehead =
 #(define-music-function (note) (ly:music?)
@@ -767,7 +768,7 @@ squareFilledNoteheadOff = \revert Voice.NoteHead.stencil
   \squareHollowNoteheadOff
   \squareFilledNotehead c'8
   \squareFilledNoteheadOn d' e' f'
-  \squareFilledNoteheadOff 
+  \squareFilledNoteheadOff
   \squareHollowNotehead a''8
   \squareHollowNoteheadOn g'' f'' e''
   \squareHollowNoteheadOff
