--- a/DOCUMENT/YO_snippets_biblio.bib
+++ b/DOCUMENT/YO_snippets_biblio.bib
@@ -207,6 +207,14 @@ address = {Cambridge, MA, USA}
    year = {2006}
 }
 
+@book{RN1757,
+   author = {Weisberg, Arthur},
+   title = {Performing twentieth-century music : a handbook for conductors and instrumentalists},
+   publisher = {Yale University Press},
+   address = {New Haven},
+   year = {1996}
+}
+
 
 
 
