--- a/DOCUMENT/noteheads.tex
+++ b/DOCUMENT/noteheads.tex
@@ -4,11 +4,14 @@
 \chapter {Noteheads}
 
 \section {Jet Whistle (for flute)}
+\label{sec:jet_whistle_1}
 \lilypondfile[staffsize=24]{/jet.ly}
 \hfill
 
 \subsection{Description}
-Implementation of the jet whistle, as described in \textit{The Techniques of Flute Playing} by Carin Levine and Christina Mitropoulos-Bott.\autocite[18]{RN1695} 
+Implementation of the jet whistle, as described in \textit{The Techniques of Flute Playing} by Carin Levine and Christina Mitropoulos-Bott.\autocite[18]{RN1695} \par\hfill\par
+
+\textbf{NB:} (Aug. 10 2025) There is now \hyperref[sec:jet_whistle_2]{a new version of the jet whistle implementation.}
 
 \subsection{Grammar}
 \begin{verbatim}
@@ -70,6 +73,85 @@ jet = #(define-music-function (pitchthing width) (ly:music? number?)
 
 
 %%%%%%%%%%%%%%%%%%%
+
+
+\section {Jet Whistle (for flute) (Version 2)}
+\label{sec:jet_whistle_2}
+\lilypondfile[staffsize=24]{/jet_v2.ly}
+\hfill
+
+\subsection{Description}
+This is an improved version of the \hyperref[sec:jet_whistle_1]{original version of the jet whistle implementation.} This version adds the functionality to adjust the height, as well as the width of the jet whistle sign.
+
+\subsection{Grammar}
+\begin{verbatim}
+\jet NOTE #Y-length #X-length
+\end{verbatim}
+\subsection{Code}
+\begin{Verbatim}[numbers=left,xleftmargin=5mm]
+jet =  #(define-music-function (pitchthing height width) (ly:music? number? number?)
+         (define p1 (ly:music-property pitchthing 'pitch))
+         (define steps (+ -6 (ly:pitch-steps p1)))
+         (define radToDeg (* 180 (/ 1 3.141592653589793)))
+
+
+         #{ #pitchthing ^\markup {
+          \postscript #(string-append
+                        "gsave 
+newpath 
+0.2 setlinewidth 
+1.15 " (number->string (+ -2.5 (* 0.5 steps))) " moveto "
+
+                        (number->string (* 0.5 width)) " "
+                        (number->string height) " rlineto "
+                        (number->string (* 0.5 width)) " "
+                        (number->string (* height -1))
+                        " rlineto
+stroke
+newpath
+0.1 setlinewidth 
+ "
+                        (number->string (+ 1.15 width))
+                        " " (number->string (+ -2.55 (* 0.5 steps)))
+                        " moveto "
+                        (number->string
+                         (* radToDeg (atan (/ (* width 0.5) height))))
+                        " rotate
+0 -1 rlineto
+-0.35 1 rlineto
+0.7 0 rlineto
+-0.35 -1 rlineto
+closepath
+fill
+grestore
+")
+         } #})
+
+
+\score {
+ {
+  \jet e'2^\markup {\fontsize #-5 {[jet]}} #5 #8
+  \jet c'4 #1 #2
+  \stemDown
+  \jet b'8  #4 #1.5
+  \jet d'8  #6 #1.5
+ }
+
+ \layout {
+  \context {
+   \Score proportionalNotationDuration = #(ly:make-moment 1/10)
+   \override SpacingSpanner.uniform-stretching = ##t
+  }
+ }
+}
+\end{Verbatim}
+\hyperref[sec:toc]{\textbf{Table of Contents}}
+
+\vfill \break
+
+
+%%%%%%%%%%%%%%%%%%%
+
 
 
 \section {Line as a Notehead}
