--- a/DOCUMENT/clefs.tex
+++ b/DOCUMENT/clefs.tex
@@ -568,7 +568,8 @@ stroke
 %%% end of mute sign for commenting/uncommenting %%%
 \end{Verbatim}
 
-\item If you do not wish the ledger lines to appear within the staff line, consider using \verb|\override Staff.NoteHead.no-ledgers = ##t|.
+\item If you do not wish the ledger lines to appear within the staff line, consider using: \par
+ \verb|\override Staff.NoteHead.no-ledgers = ##t|.
 \end{enumerate}
 
 \hyperref[sec:toc]{\textbf{Table of Contents}}
@@ -733,7 +734,8 @@ stroke
 %%% end of mute sign for commenting/uncommenting %%%
 \end{Verbatim}
 
-\item If you do not wish the ledger lines to appear within the staff line, consider using \verb|\override Staff.NoteHead.no-ledgers = ##t|.
+\item If you do not wish the ledger lines to appear within the staff line, consider using: \par
+ \verb|\override Staff.NoteHead.no-ledgers = ##t|.
 \end{enumerate}
 
 \hyperref[sec:toc]{\textbf{Table of Contents}}
