--- a/DOCUMENT/dynamics.tex
+++ b/DOCUMENT/dynamics.tex
@@ -11,6 +11,9 @@
 \hfill
 
 \subsection{Description}
+
+\textcolor{red}{Updated: November 12, 2025: hairpins will stop closer to the dynamics in quotation marks.}
+
 Dynamics in quotation marks, also known as \textit{effort dynamics}, indicate those with which certain techniques must be carried on, understanding that the perceived dynamics will be quieter than what are indicated. Examples abound in scores by Helmut Lachenmann and others for such techniques as air sound, bowing directly on the bridge, etc..
 
 \subsection{Grammar}
@@ -29,70 +32,86 @@ NOTE \qfff
 \version "2.24.4"
 
 qmp = #(make-dynamic-script
-        (markup #:combine
-                #:combine
-                #:translate '(-0.85 . -0.1)
-                #:normal-text (#:italic #:fontsize 0.75 "\"")
-                #:dynamic "mp"
-                #:translate '(3.25 . -0.1)
-                #:normal-text (#:italic #:fontsize 0.75 "\"")))
+        (markup
+         #:pad-x -1
+         ( #:combine
+           #:combine
+           #:translate '(-0.85 . -0.1)
+           #:normal-text (#:italic #:fontsize 0.75 "\"")
+           #:dynamic "mp"
+           #:translate '(3.25 . -0.1)
+           #:normal-text (#:italic #:fontsize 0.75 "\""))))
 qp = #(make-dynamic-script
-       (markup #:combine
-               #:combine
-               #:translate '(-0.95 . -0.1)
-               #:normal-text (#:italic #:fontsize 0.75 "\"")
-               #:dynamic "p"
-               #:translate '(1.35 . -0.1)
-               #:normal-text (#:italic #:fontsize 0.75 "\"")))
+       (markup
+        #:pad-x -1
+        (
+         #:combine
+         #:combine
+         #:translate '(-0.95 . -0.1)
+         #:normal-text (#:italic #:fontsize 0.75 "\"")
+         #:dynamic "p"
+         #:translate '(1.35 . -0.1)
+         #:normal-text (#:italic #:fontsize 0.75 "\""))))
 qpp = #(make-dynamic-script
-        (markup #:combine
-                #:combine
-                #:translate '(-0.95 . -0.1)
-                #:normal-text (#:italic #:fontsize 0.75 "\"")
-                #:dynamic "pp"
-                #:translate '(2.75 . -0.1)
-                #:normal-text (#:italic #:fontsize 0.75 "\"")))
+        (markup
+         #:pad-x -1
+         (  #:combine
+            #:combine
+            #:translate '(-0.95 . -0.1)
+            #:normal-text (#:italic #:fontsize 0.75 "\"")
+            #:dynamic "pp"
+            #:translate '(2.75 . -0.1)
+            #:normal-text (#:italic #:fontsize 0.75 "\""))))
 qppp = #(make-dynamic-script
-         (markup #:combine
-                 #:combine
-                 #:translate '(-0.95 . -0.1)
-                 #:normal-text (#:italic #:fontsize 0.75 "\"")
-                 #:dynamic "ppp"
-                 #:translate '(4.25 . -0.1)
-                 #:normal-text (#:italic #:fontsize 0.75 "\"")))
-
+         (markup
+          #:pad-x -1
+          (   #:combine
+              #:combine
+              #:translate '(-0.95 . -0.1)
+              #:normal-text (#:italic #:fontsize 0.75 "\"")
+              #:dynamic "ppp"
+              #:translate '(4.25 . -0.1)
+              #:normal-text (#:italic #:fontsize 0.75 "\""))))
 qmf = #(make-dynamic-script
-        (markup #:combine
-                #:combine
-                #:translate '(-0.85 . 0)
-                #:normal-text (#:italic #:fontsize 0.75 "\"")
-                #:dynamic "mf"
-                #:translate '(3.25 . 0)
-                #:normal-text (#:italic #:fontsize 0.75 "\"")))
+        (markup
+         #:pad-x -1
+         (   #:combine
+             #:combine
+             #:translate '(-0.85 . 0)
+             #:normal-text (#:italic #:fontsize 0.75 "\"")
+             #:dynamic "mf"
+             #:translate '(3.25 . 0)
+             #:normal-text (#:italic #:fontsize 0.75 "\""))))
 qf = #(make-dynamic-script
-       (markup #:combine
-               #:combine
-               #:translate '(-0.75 . 0)
-               #:normal-text (#:italic #:fontsize 0.75 "\"")
-               #:dynamic "f"
-               #:translate '(1.65 . 0)
-               #:normal-text (#:italic #:fontsize 0.75 "\"")))
+       (markup
+        #:pad-x -1
+        ( #:combine
+          #:combine
+          #:translate '(-0.75 . 0)
+          #:normal-text (#:italic #:fontsize 0.75 "\"")
+          #:dynamic "f"
+          #:translate '(1.65 . 0)
+          #:normal-text (#:italic #:fontsize 0.75 "\""))))
 qff = #(make-dynamic-script
-        (markup #:combine
-                #:combine
-                #:translate '(-0.75 . 0)
-                #:normal-text (#:italic #:fontsize 0.75 "\"")
-                #:dynamic "ff"
-                #:translate '(2.75 . 0)
-                #:normal-text (#:italic #:fontsize 0.75 "\"")))
+        (markup
+         #:pad-x -1
+         ( #:combine
+           #:combine
+           #:translate '(-0.75 . 0)
+           #:normal-text (#:italic #:fontsize 0.75 "\"")
+           #:dynamic "ff"
+           #:translate '(2.75 . 0)
+           #:normal-text (#:italic #:fontsize 0.75 "\""))))
 qfff = #(make-dynamic-script
-         (markup #:combine
-                 #:combine
-                 #:translate '(-0.75 . 0)
-                 #:normal-text (#:italic #:fontsize 0.75 "\"")
-                 #:dynamic "fff"
-                 #:translate '(3.85 . 0)
-                 #:normal-text (#:italic #:fontsize 0.75 "\"")))
+         (markup
+          #:pad-x -1
+          (  #:combine
+             #:combine
+             #:translate '(-0.75 . 0)
+             #:normal-text (#:italic #:fontsize 0.75 "\"")
+             #:dynamic "fff"
+             #:translate '(3.85 . 0)
+             #:normal-text (#:italic #:fontsize 0.75 "\""))))
 
 {
 
