--- a/DOCUMENT/spanners.tex
+++ b/DOCUMENT/spanners.tex
@@ -760,7 +760,8 @@ stopAcciaccaturaMusic = {
 {
  \grace {
   \startSlashedGraceMusic
-  \graceNoteBeforeBeatOn #'(1 -2 -1) d'8^\markup{\translate #'(0 . 3) \box A} e f g e' c'
+  \graceNoteBeforeBeatOn #'(1 -2 -1) d'8^\markup{\translate #'(0 . 3) \box A} 
+  e f g e' c'
  }
  \graceNoteBeforeBeatOff d''2
  \grace {
